--- a/TV Shows.html
+++ b/TV Shows.html
@@ -5,116 +5,118 @@
     <title>TV Shows</title>
     <style>
         /* CSS code for background video */
-#bg-video {
-    position: fixed;
-    top: 0;
-    left: 0;
-    min-width: 100%;
-    min-height: 100%;
-    z-index: -1; /* Ensure the video stays behind other content */
-    object-fit: cover; /* Cover the entire viewport */
-}
+        #bg-video {
+            position: fixed;
+            top: 0;
+            left: 0;
+            min-width: 100%;
+            min-height: 100%;
+            z-index: -1; /* Ensure the video stays behind other content */
+            object-fit: cover; /* Cover the entire viewport */
+        }
 
-footer {
-    background-color: rgba(0, 0, 0, 0.5); /* Darkened background for better contrast */
-    color: white; /* Text color */
-    padding: 20px;
-    text-align: center;
-    font-family: Arial, sans-serif; /* Font family */
-}
+        footer {
+            background-color: rgba(0, 0, 0, 0.5); /* Darkened background for better contrast */
+            color: white; /* Text color */
+            padding: 20px;
+            text-align: center;
+            font-family: Arial, sans-serif; /* Font family */
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
 
-/* CSS for horizontal container */
-.horizontal-container {
-    display: flex;
-    overflow-x: auto; /* Enable horizontal scrolling */
-    padding: 20px 0; /* Add padding to space out from edges */
-    justify-content: center; /* Center-align items */
-}
+        /* CSS for horizontal container */
+        .horizontal-container {
+            display: flex;
+            overflow-x: auto; /* Enable horizontal scrolling */
+            padding: 20px 0; /* Add padding to space out from edges */
+            justify-content: center; /* Center-align items */
+        }
 
-.image-item {
-    flex: 0 0 auto; /* Ensure images maintain their original size */
-    margin-right: 20px; /* Add space between images */
-}
+        .image-item {
+            flex: 0 0 auto; /* Ensure images maintain their original size */
+            margin-right: 20px; /* Add space between images */
+        }
 
-.image-item img {
-    height: 234px;
-    width: 149px;
-    border-radius: 10px; /* Rounded corners for images */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Add shadow for depth */
-}
+        .image-item img {
+            height: 234px;
+            width: 149px;
+            border-radius: 10px; /* Rounded corners for images */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Add shadow for depth */
+        }
 
-.image-title {
-    text-align: center;
-    margin-top: 10px; /* Increase margin for better spacing */
-    font-size: 16px; /* Adjust font size */
-}
+        .image-title {
+            text-align: center;
+            margin-top: 10px; /* Increase margin for better spacing */
+            font-size: 16px; /* Adjust font size */
+        }
 
-/* Social Media Icons */
-.social-media-icons {
-    list-style: none;
-    padding: 0;
-    margin: 20px 0; /* Add margin for separation */
-    text-align: center; /* Center-align icons */
-}
+        /* Social Media Icons */
+        .social-media-icons {
+            list-style: none;
+            padding: 0;
+            margin: 20px 0; /* Add margin for separation */
+            text-align: center; /* Center-align icons */
+        }
 
-.social-media-icons li {
-    display: inline;
-    margin: 0 15px; /* Add margin between icons */
-}
+        .social-media-icons li {
+            display: inline;
+            margin: 0 15px; /* Add margin between icons */
+        }
 
-.social-media-icons li a {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #333; /* Background color for icons */
-    line-height: 40px;
-    text-align: center;
-    color: white; /* Icon color */
-    font-size: 20px; /* Icon size */
-    transition: background-color 0.3s, transform 0.3s; /* Smooth transition */
-}
+        .social-media-icons li a {
+            display: inline-block;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background-color: #333; /* Background color for icons */
+            line-height: 40px;
+            text-align: center;
+            color: white; /* Icon color */
+            font-size: 20px; /* Icon size */
+            transition: background-color 0.3s, transform 0.3s; /* Smooth transition */
+        }
 
-.social-media-icons li a:hover {
-    background-color: #555; /* Darken background on hover */
-    transform: translateY(-3px); /* Add slight lift effect on hover */
-}
+        .social-media-icons li a:hover {
+            background-color: #555; /* Darken background on hover */
+            transform: translateY(-3px); /* Add slight lift effect on hover */
+        }
 
-/* Navigation */
-nav {
-    background-color: #333;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    font-family: Arial, sans-serif; /* Adding a font for better readability */
-    position: fixed;
-    width: 100%;
-    top: 0;
-    z-index: 1000;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add shadow for separation */
-}
+        /* Navigation */
+        nav {
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            font-family: Arial, sans-serif; /* Adding a font for better readability */
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add shadow for separation */
+        }
 
-nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
 
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
+        nav ul li {
+            display: inline;
+            margin-right: 20px;
+        }
 
-nav ul li a {
-    color: white;
-    text-decoration: none;
-    transition: color 0.3s; /* Adding a smooth transition for color change */
-}
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            transition: color 0.3s; /* Adding a smooth transition for color change */
+        }
 
-nav ul li a:hover {
-    color: red; /* Changing text color to red on hover */
-}
-
+        nav ul li a:hover {
+            color: red; /* Changing text color to red on hover */
+        }
     </style>
 </head>
 <body>
@@ -139,28 +141,28 @@ nav ul li a:hover {
         </nav>
         <div class="horizontal-container">
             <div class="image-item">
-               <img alt="911" src="images/911.jpeg">
+                <img alt="911" src="images/911.jpeg">
                 <div class="image-title">The 911</div>
             </div>
 
             <div class="image-item">
-                <img alt="FBI" src="FBI.jpeg">
+                <img alt="FBI" src="images/FBI.jpeg">
                 <div class="image-title">The FBI</div>
             </div>
             <div class="image-item">
-                <img alt="Beacon 3" src="beac.jpeg">
+                <img alt="Beacon 3" src="images/beac.jpeg">
                 <div class="image-title">The Beacon</div>
             </div>
             <div class="image-item">
-                <img alt="Bloods" src="bloods.jpeg">
+                <img alt="Bloods" src="images/bloods.jpeg">
                 <div class="image-title">The Bloods</div>
             </div>
             <div class="image-item">
-                <img alt="The Neighborhood" src="hood.jpeg">
-                <div class="image-title">The Neghborhood</div>
+                <img alt="The Neighborhood" src="images/hood.jpeg">
+                <div class="image-title">The Neighborhood</div>
             </div>
             <div class="image-item">
-                <img alt="FBI" src=".jpeg">
+                <img alt="FBI" src="images/FBI.jpeg">
                 <div class="image-title">The FBI</div>
             </div>
         </div>
@@ -169,14 +171,13 @@ nav ul li a:hover {
     <!-- Footer -->
     <footer>
         <ul class="social-media-icons">
-            <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
-            <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
-            <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
-            <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
+            <li><a href="#"><img src="images/whATSP.png" alt="WhatsApp"></a></li>
+            <li><a href="#"><img src="images/TIKTOK.jpeg" alt="TikTok"></a></li>
+            <li><a href="#"><img src="images/TWITTER.jpeg" alt="Twitter"></a></li>
+            <li><a href="#"><img src="images/IG.png" alt="Instagram"></a></li>
             <!-- Add more social media icons as needed -->
         </ul>
         <p>&copy; 2024 Warner Bros Website. All rights reserved.</p>
     </footer>
 </body>
-
 </html>
