--- a/feedback.html
+++ b/feedback.html
@@ -153,17 +153,16 @@ footer {
 
     <footer>
         <ul class="social-media-icons">
-            <li><a href="#"><img src="whatsapp.png" alt="WhatsApp"></a></li>
-            <li><a href="#"><img src="tiktok.png" alt="TikTok"></a></li>
-            <li><a href="#"><img src="twitter.png" alt="Twitter"></a></li>
-            <li><a href="#"><img src="instagram.png" alt="Instagram"></a></li>
+           <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
+            <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
+            <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
+            <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
+            <!-- Add more social media icons as needed -->
         </ul>
-        <p>&copy; 2024 Your Website. All rights reserved.</p>
+        <p>&copy; 2024 !Join our community today!Stay connected with us,Discover more on our socials:> Explore our latest updates:Follow us for exclusive content. Experience the world of [Warner Bros]. Your feedback matters to us! Let's create something amazing together!.</p>
     </footer>
-
     <script>
         // JavaScript code can be added here for form submission handling or other functionality
     </script>
 </body>
-
 </html>
