--- a/TV Shows.html
+++ b/TV Shows.html
@@ -57,8 +57,8 @@
             margin-top: 100px; /* Add margin from the top to avoid overlap with the navigation */
         }
 
-        .image-item {
-            margin-right: 20px; /* Add space between images */
+        .image-section {
+            margin-right: 20px; /* Add space between sections */
         }
 
         .image-item img {
@@ -139,30 +139,43 @@
     </header>
 
     <div class="horizontal-container">
-        <div class="image-item">
-            <img alt="911" src="images/911.jpeg">
-            <div class="image-title">The 911</div>
-        </div>
-        <div class="image-item">
-            <img alt="FBI" src="images/FBI.jpeg">
-            <div class="image-title">The FBI</div>
-        </div>
-        <div class="image-item">
-            <img alt="Beacon 3" src="images/beac.jpeg">
-            <div class="image-title">The Beacon</div>
-        </div>
-        <div class="image-item">
-            <img alt="Bloods" src="images/bloods.jpeg">
-            <div class="image-title">The Bloods</div>
-        </div>
-        <div class="image-item">
-            <img alt="The Neighborhood" src="images/hood.jpeg">
-            <div class="image-title">The Neighborhood</div>
-        </div>
-        <div class="image-item">
-            <img alt="FBI" src="images/FBI.jpeg">
-            <div class="image-title">The FBI</div>
-        </div>
+        <section class="image-section">
+            <div class="image-item">
+                <img alt="911" src="images/911.jpeg">
+                <div class="image-title">The 911</div>
+            </div>
+        </section>
+        <section class="image-section">
+            <div class="image-item">
+                <img alt="FBI" src="images/FBI.jpeg">
+                <div class="image-title">The FBI</div>
+            </div>
+        </section>
+        <section class="image-section">
+            <div class="image-item">
+                <img alt="Beacon 3" src="images/beac.jpeg">
+                <div class="image-title">The Beacon</div>
+            </div>
+        </section>
+        <section class="image-section">
+            <div class="image-item">
+                <img alt="Bloods" src="images/bloods.jpeg">
+                <div class="image-title">The Bloods</div>
+            </div>
+        </section>
+        <section class="image-section">
+            <div class="image-item">
+                <img alt="The Neighborhood" src="images/hood.jpeg">
+                <div class="image-title">The Neighborhood</div>
+            </div>
+        </section>
+        <section class="image-section">
+            <div class="image-item">
+                <img alt="FBI" src="images/FBI.jpeg">
+                <div class="image-title">The FBI</div>
+            </div>
+        </section>
+    </div>
 
     <!-- Footer -->
     <footer>
