--- a/TV Shows.html
+++ b/TV Shows.html
@@ -141,37 +141,37 @@
     <div class="horizontal-container">
         <section class="image-section">
             <div class="image-item">
-                <img alt="911" src="images/911.jpeg">
+                <img alt="911" src="911.jpeg">
                 <div class="image-title">The 911</div>
             </div>
         </section>
         <section class="image-section">
             <div class="image-item">
-                <img alt="FBI" src="images/FBI.jpeg">
+                <img alt="FBI" src="FBI.jpeg">
                 <div class="image-title">The FBI</div>
             </div>
         </section>
         <section class="image-section">
             <div class="image-item">
-                <img alt="Beacon 3" src="images/beac.jpeg">
+                <img alt="Beacon 3" src="beac.jpeg">
                 <div class="image-title">The Beacon</div>
             </div>
         </section>
         <section class="image-section">
             <div class="image-item">
-                <img alt="Bloods" src="images/bloods.jpeg">
+                <img alt="Bloods" src="bloods.jpeg">
                 <div class="image-title">The Bloods</div>
             </div>
         </section>
         <section class="image-section">
             <div class="image-item">
-                <img alt="The Neighborhood" src="images/hood.jpeg">
+                <img alt="The Neighborhood" src="hood.jpeg">
                 <div class="image-title">The Neighborhood</div>
             </div>
         </section>
         <section class="image-section">
             <div class="image-item">
-                <img alt="FBI" src="images/FBI.jpeg">
+                <img alt="FBI" src="FBI.jpeg">
                 <div class="image-title">The FBI</div>
             </div>
         </section>
