--- a/collections.html
+++ b/collections.html
@@ -109,11 +109,10 @@
             max-width: 100%;
             max-height: 100%;
         }
-         nav ul {
-            margin: 0;
+        nav ul {
+            list-style-type: none;
             padding: 0;
-            list-style: none;
-            text-align: center;
+            margin: 0;
         }
 
         nav ul li {
@@ -124,13 +123,11 @@
         nav ul li a {
             color: white;
             text-decoration: none;
-            font-weight: bold;
-            font-size: 18px;
-            transition: color 0.3s;
+            transition: color 0.3s; /* Adding a smooth transition for color change */
         }
 
         nav ul li a:hover {
-            color: #007bff;
+            color: red; /* Changing text color to red on hover */
         }
     </style>
 </head>
